# tacitpixel

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt
apps/: CMakeLists.txt
apps/TacitAndroid/: AndroidManifest.xml  CMakeLists.txt  Manifest.xml  TacitAndroid.cxx
apps/TacitAndroid/res/values/: strings.xml
apps/TacitAndroid/src/com/technotecture/TacitAndroid/: TacitAndroidActivity.java
apps/glut/: CMakeLists.txt  glutviewer.cxx
apps/iosviewer/: CMakeLists.txt  Info.cmake.plist  appdelegate.h  appdelegate.mm  main.mm
apps/show/: CMakeLists.txt  show.cxx
apps/ssttviewer/: CMakeLists.txt  ssttviewer.cxx
etc/: CMakeLists.txt  tacit.dox.in
etc/branding/: tacitpixel.ai
etc/cmake/: FindOpenGLES.cmake
include/tp/: allocator.h  arguments.h  array.h  assert.h  camera.h  chunk.h  dialogs.h  egl.h  event.h  factory.h  field.h  file.h  filename.h  fixed.h  font.h  functoid.h  gl.h  globals.h  gzipio.h  hash.h  host.h  image.h  imagehandler.h  imageop.h  io.h  ioutils.h  library.h  light.h  list.h  log.h  logutils.h  map.h  mat.h  material.h  math.h  matop.h  matrix.h  mesh.h  module.h  mutex.h  (+49 more)
share/: testfile.txt  testscreen.tga
share/models/: axis.blend  axis.mtl  box-new.3ds  box-sub.3ds  box.3ds  box.blend  box.blend1  box.blend2  box.mtl  dice.3ds  monkey-green.3ds  monkey-low.3ds  monkey-small.3ds  monkey.3ds  monkey.blend  monkey.dae  monkey_highlight.mtl
share/models/huedde2_3ds/: huette.3ds
src/: CMakeLists.txt
src/tp/: CMakeLists.txt  allocator.cxx  arguments.cxx  camera.cxx  chunk.cxx  config.h.in  dialogs.cxx  egl.cxx  event.cxx  file.cxx  filename.cxx  fixed.cxx  font.cxx  functoid.cxx  gl.cxx  gzipio.cxx  hash.cxx  image.cxx  imagehandler.cxx  imageop.cxx  ioutils.cxx  library.cxx  light.cxx  log.cxx  material.cxx  mesh.cxx  module.cxx  mutex.cxx  node.cxx  nodeops.cxx  object.cxx  primitive.cxx  projection.cxx  referenced.cxx  renderable.cxx  rendercontext.cxx  renderer.cxx  rendersurface.cxx  rs232.cxx  rtl.cxx  (+20 more)
src/tp/_impl/: dialogs_cocoa.h  dialogs_cocoa.mm  dialogs_win32.cxx  dialogs_win32.h  glprogram.cxx  glprogram.h  renderbuffer_glx.cxx  renderbuffer_x11.cxx  rendercontext_cocoa.h  rendercontext_cocoa.mm  rendercontext_eagl.h  rendercontext_eagl.mm  rendercontext_egl.cxx  rendercontext_egl.h  rendercontext_glx.cxx  rendercontext_glx.h  rendercontext_wgl.cxx  rendercontext_wgl.h  renderer_gl1.cxx  renderer_gl2.cxx  rendersurface_cocoa.h  rendersurface_cocoa.mm  rendersurface_win32.cxx  rendersurface_win32.h  rendersurface_x11.cxx  rendersurface_x11.h  script_lua.cxx  script_lua.h  soundstream_ogg.cxx  soundstream_ogg.h  window_cocoa.h  window_cocoa.mm  window_win32.cxx  window_win32.h  window_x11.cxx  window_x11.h
src/tp/_impl/_lua/: window.i
src/tp/_modules/: CMakeLists.txt
src/tp/_modules/image/: CMakeLists.txt
src/tp/_modules/image/bmp/: CMakeLists.txt  bmp_handler.cxx
src/tp/_modules/image/jpg/: CMakeLists.txt  jpg_handler.cxx
src/tp/_modules/image/null/: CMakeLists.txt  null_handler.cxx
src/tp/_modules/image/png/: CMakeLists.txt  png_handler.cxx  png_handler.cxx.autosave
src/tp/_modules/image/ppm/: CMakeLists.txt  ppm_handler.cxx
src/tp/_modules/image/tga/: CMakeLists.txt  tga_handler.cxx
src/tp/_modules/model/: CMakeLists.txt
src/tp/_modules/model/3ds/: CMakeLists.txt  Makefile.in  config.h  main.cpp  nodehandler_3ds.cxx
src/tp/_modules/model/3ds/lib3ds/: CMakeLists.txt  camera.h  chunktable.h  float.h  io.h  lib3ds.h  lib3ds_io.c  material.h  mesh.c  node.c  quat.c  shadow.h  tcb.h  tracks.c  vector.c
src/tp/_modules/model/3ds/lib3ds/.svn/: entries
src/tp/_modules/model/3ds/lib3ds_old/: CMakeLists.txt  atmosphere.h  background.h  camera.c  chunk.h  ease.h  file.c  file.h  light.h  material.c  matrix.c  matrix.h  mesh.h  node.c  node.h  quat.h  tracks.h  types.h  vector.h  viewport.c  viewport.h
src/tp/_modules/model/dae/: CMakeLists.txt  nodehandler_dae.cxx
src/tp/_modules/renderer/: CMakeLists.txt  tpGL.cpp  tpGL.h  tpGLConfig.h.in  tpGLRenderSurfaceCocoa.h  tpGLRenderSurfaceCocoa.mm  tpGLRenderSurfaceEGL.h  tpGLRenderSurfaceSDL.cpp  tpGLRenderSurfaceWin32.cpp  tpGLRenderSurfaceWin32.h  tpGLRenderSurfaceX11.cpp  tpGLRenderSurfaceX11.h  tpGLRenderer.cpp  tpGLRenderer.h  tpGLShader.cpp  tpGLShader.h
src/tp/_modules/renderer/opengl1/: opengl1_renderer.cxx
src/tp/_modules/renderer/shaders/: generate_fimg.cmd  generate_z400.cmd  mesh.frag  mesh.vert
src/tp/_modules/rendersurface/: CMakeLists.txt  rendersurface_cocoa.h  rendersurface_cocoa.mm  rendersurface_w32.cpp  rendersurface_w32.h  rendersurface_x11.cxx  rendersurface_x11.h  tpGLRenderSurfaceEGL.cpp  tpGLRenderSurfaceEmbedded.cpp  tpGLRenderSurfaceEmbedded.h  tpGLRenderSurfaceSDL.h  tpGLRenderSurfaceWin32.h  tpGLRenderSurfaceX11.cpp  tpGLRenderSurfaceX11.h
src/tp/_testing/: CMakeLists.txt  test_000.cxx  test_001.cxx  test_002.cxx  test_003.cxx  test_004.cxx  test_005.cxx  test_006.cxx  test_007.cxx  test_008.cxx  test_009.cxx  test_010.cxx  test_011.cxx  test_012.cxx  test_013.cxx  test_014.cxx  test_015.cxx  test_016.cxx  test_017.cxx  test_018.cxx  test_019.cxx  test_020.cxx  test_perf.cxx
src/tp/_thirdparty/: CMakeLists.txt
src/tp/_thirdparty/dlmalloc/: CMakeLists.txt  malloc.c  malloc_.h
src/tp/_thirdparty/libjpeg/: CMakeLists.txt  jmemansi.c
src/tp/_thirdparty/libogg/: CMakeLists.txt
src/tp/_thirdparty/libogg/include/ogg/: config_types.h.in
src/tp/_thirdparty/libpng/: CMakeLists.txt
src/tp/_thirdparty/libvorbis/: CMakeLists.txt
src/tp/_thirdparty/lua/: CMakeLists.txt
src/tp/_thirdparty/lua/src/: luaconf.h  lualib.h
src/tp/_thirdparty/luawrapper/: README  luawrapper.h  luawrapperutils.h
src/tp/_thirdparty/minizip/: CMakeLists.txt  zip.c
src/tp/_thirdparty/stb_truetype/: stb_truetype.h
src/tp/_thirdparty/zlib/: CMakeLists.txt  zlib.h  zutil.h
src/tp/_thirdparty/zlib/minizip/: CMakeLists.txt
src/tp/_unit/: CMakeLists.txt  tptest_000.cxx
src/tp/_wrapper/: gen.sh  tacit.i
