add_subdirectory(dlmalloc)
add_subdirectory(zlib)
add_subdirectory(libjpeg)
add_subdirectory(libpng)
add_subdirectory(stb_truetype)
add_subdirectory(libvorbis)
add_subdirectory(libogg)
option(TP_USE_PORTAUDIO "Use portaudio for sound output" OFF)
if (TP_USE_PORTAUDIO)
	add_subdirectory(portaudio)
endif()
